# BIPIA-Modernized

./: .gitignore  README.md  pyproject.toml
bipia/metrics/eval/: model.py
bipia/model/: __init__.py  gpt.py  llama.py  vllm_worker.py
experiment/: gen_adaptive_best_7pm.py  generate_adaptive.py  generate_adaptive_complex.py  load_data.py  run_experiment.py  run_experiment.sh  run_experiment_claude.py  run_generate.sh  run_score.sh  score_results.py
