[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bipia"
version = "0.1.0"
description = "A benchmark to evaluate the robustness of LLMs and defenses to indirect prompt injection attacks."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "py-cpuinfo",
    "torch>=2.0.1",
    "transformers>=4.34.0",
    "accelerate>=0.15.0",
    "datasets>=2.8.0",
    "jsonlines",
    "evaluate",
    "rouge-score",
    "tqdm",
    "wandb",
    "numpy",
    "langdetect",
    "thefuzz",
    "openai>=1.0.0",
    "anthropic>=0.20.0",
    "pandas",
    "emoji"
]


[project.urls]
Homepage = "https://github.com/microsoft/BIPIA"
Documentation = "https://github.com/microsoft/BIPIA"
Source = "https://github.com/microsoft/BIPIA"
Tracker = "https://github.com/microsoft/BIPIA/issues"

[tool.setuptools.packages.find]
exclude = ["tests", "examples", "defense", "config", "benchmark"]

[tool.wheel]
universal = true
